QA fixes for media queries on small mobiles

--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -95,8 +95,8 @@ body {
 	}
 }
 
-/* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) {
+/* Custom, galaxy S5 */ 
+@media only screen and (max-width : 375px) {
 	.site-header {
 		.logo { width: 67px; }
 		.title { padding-left: 20px; font-size: 20px; }
