--- a/app/assets/scss/_sidebar.scss
+++ b/app/assets/scss/_sidebar.scss
@@ -67,7 +67,7 @@
     }
 }
 
-/* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) { 
+/* Custom, galaxy S5 */ 
+@media only screen and (max-width : 375px) { 
     .sidebar ul { margin: 8px 14px; }
 }
