--- a/app/modules/property-filter/scss/_filter.scss
+++ b/app/modules/property-filter/scss/_filter.scss
@@ -86,7 +86,7 @@
     }
 }
 
-/* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) { 
+/* Custom, galaxy S5 */  
+@media only screen and (max-width : 375px) { 
     .property_filters ul li { width: 33.33%; }
 }
